--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 {nom: "Msamn", calories: 318, unite: "g"}
             ],
             boissons: [
-                {nom: "3asir brtqal", calories: 45, unite: "ml"},
+                {nom: "3asir borto9al", calories: 45, unite: "ml"},
                 {nom: "Coca Cola", calories: 42, unite: "ml"},
                 {nom: "Café (bla sokkar)", calories: 2, unite: "ml"},
                 {nom: "Zit zitoun", calories: 884, unite: "ml"},
